# localstack-qdrant

./: README.md  pyproject.toml
qdrant_extension/: __init__.py  extension.py
qdrant_extension/utils/: docker.py
