[build-system]
requires = ["setuptools", 'wheel', 'plux>=1.3.1']
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-extension"
version = "0.1.0"
description = "LocalStack Extension: Qdrant Extension"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.8"
license = {text = "UNLICENSED"}
authors = [
    { name = "Qdrant Team", email = "info@qdrant.tech" }
]
keywords = ["localstack", "localstack-extension", "extension"]
classifiers = []
dependencies = [
]

[project.urls]
Homepage = "https://github.com/qdrant/localstack-qdrant"

[project.optional-dependencies]
dev = [
    "localstack>=0.0.0.dev"
]

[project.entry-points."localstack.extensions"]
qdrant_extension = "qdrant_extension.extension:QdrantExtension"
